--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+client/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -56,6 +57,10 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # next.js build output
 .next
